@@ -113,19 +113,19 @@ describe SheldonClient::UrlHelper do
 
   context "user high_scores" do
     it "shoudl return the correct url given an user" do
-      uri = user_high_scores_url(123)
+      uri = user_high_scores_url(13)
 
       uri.should be_a Addressable::URI
       uri.path.should eq("/high_scores/users/13")
     end
 
     it "should return attach the type to the url if given" do
-      uri = user_high_scores_url(123, :tracked)
+      uri = user_high_scores_url(13, :tracked)
 
       uri.should be_a Addressable::URI
       uri.path.should eq("/high_scores/users/13/tracked")
 
-      uri = user_high_scores_url(123, :untracked)
+      uri = user_high_scores_url(13, :untracked)
 
       uri.should be_a Addressable::URI
       uri.path.should eq("/high_scores/users/13/untracked")
